<resources>
    <string name="app_name">Store</string>
    <string name="title_home">首页</string>
    <string name="title_discover">发现</string>
    <string name="title_order">订单</string>
    <string name="title_my">我的</string>

    <string name="button_1">便利超市</string>
    <string name="button_2">数码商城</string>
    <string name="button_3">快递送货</string>
    <string name="button_4">快速打印</string>
    <string name="button_5">跳蚤市场</string>
    <string name="button_6">潮牌代购</string>
    <string name="button_7">便捷租赁</string>
    <string name="button_8">"          "地址</string>
    <string name="button_9">"          "收藏</string>
    <string name="button_10">"          "客服</string>
    <string name="button_11">"          "设置</string>

    <string name="login_1">用户名/手机号</string>
    <string name="login_2">请输入密码</string>
    <string name="login_3">记住密码</string>
    <string name="login">登录</string>
    <string name="login_4">忘记密码</string>
    <string name="login_5">一键注册</string>
    <string name="login_6">手机注册</string>
    <string name="reg_1">请输入用户名</string>
    <string name="reg">注册</string>
    <string name="phone_reg_1">请输入手机号</string>
    <string name="phone_reg_2">请输入验证码</string>
    <string name="phone_reg_3">获取验证码</string>
    <string name="phone_forget_1">请输入新密码</string>
    <string name="phone_forget_2">重置密码</string>

    <string name="my_welcome">欢迎您！</string>
    <string name="my_setting_back">退出登录</string>
    <string name="my_setting_yes">确认修改</string>
    <string name="my_setting_help">关于与帮助</string>
    <string name="my_setting_skin">皮肤更换</string>
    <string name="my_setting_nic">昵称</string>
    <string name="my_setting_sex">性别</string>
    <string name="my_setting_phone">手机</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
