<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_back"
        tools:context="com.example.zqf.store.ForgetPasswordActivity"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_forget_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_reg_1"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/editText_forget_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:hint="@string/phone_reg_2"
                android:inputType="text" />

            <Button
                android:id="@+id/button_forget_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#99CCFF"
                android:text="@string/phone_reg_3" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText_forget_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/phone_forget_1"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_forget_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginBottom="300dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#99CCFF"
            android:text="@string/phone_forget_2" />
    </LinearLayout>
