<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_back"
        tools:context="com.example.zqf.store.RegisterActivity"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_register_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/reg_1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/login_2"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register_Reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#99CCFF"
            android:text="@string/reg" />
    </LinearLayout>
