<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zqf.store.Activity_My.SettingActivity">

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#99CCFF"
        android:text="@string/my_setting_back"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/button15"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#99CCFF"
        android:text="@string/my_setting_skin"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#99CCFF"
        android:text="@string/my_setting_help"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:text="@string/my_setting_nic"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_row="0"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_row="1"
            android:text="@string/my_setting_sex"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_row="2"
            android:text="@string/my_setting_phone"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_row="2"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_row="3"
            android:background="#99CCFF"
            android:text="@string/my_setting_yes"
            android:textSize="15sp" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>
