<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEE"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFF"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="2">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_margin="25dp"
                android:layout_row="0"
                android:layout_rowSpan="2"
                app:srcCompat="@drawable/my" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_marginTop="25dp"
                android:layout_row="0"
                android:gravity="left|center"
                android:text="@string/my_welcome"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_row="1"
                android:gravity="left"
                android:text="xxxxxxx"
                android:textStyle="bold" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.7"
            android:orientation="vertical">

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/map"
                android:gravity="left|center"
                android:text="@string/button_8"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/like"
                android:gravity="left|center"
                android:text="@string/button_9"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/help"
                android:gravity="left|center"
                android:text="@string/button_10"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting"
                android:gravity="left|center"
                android:text="@string/button_11"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>